style: fix vertical spacing in login button

--- a/src/components/LoginPage.module.css
+++ b/src/components/LoginPage.module.css
@@ -36,7 +36,7 @@
   color: var(--brand-white);
   border: none;
   font-size: clamp(0.9rem, 2.5vw, 1.5rem);
-  padding: 1.1em 3em;
+  padding: 1em 3em;
   font-weight: 600;
   border-radius: 50em;
   cursor: pointer;
@@ -63,6 +63,8 @@
 
 .buttonText {
   flex-shrink: 0;
+  transform: translateY(-2.5px);
+  font-size: 1.2rem;
 }
 
 .arrowContainer {
